Feat/configurable setup (#39)
* try args

* mhh

* add apt update

* configurable compose file

* try args again

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,12 +18,16 @@ services:
     build:
       context: ./ui
       dockerfile: Dockerfile
+      args:
+        VITE_API_URL: ${VITE_API_URL:-http://api:3000}
+        VITE_WS_URL: ${VITE_WS_URL:-ws://api:3000}
+        VITE_OPENAPI_URL: ${VITE_OPENAPI_URL:-http://api:3000/documentation/json}
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_URL=http://api:3000
-      - VITE_WS_URL=ws://api:3000
-      - VITE_OPENAPI_URL=http://api:3000/documentation/json
+      - VITE_API_URL=${VITE_API_URL:-http://api:3000}
+      - VITE_WS_URL=${VITE_WS_URL:-ws://api:3000}
+      - VITE_OPENAPI_URL=${VITE_OPENAPI_URL:-http://api:3000/documentation/json}
     depends_on:
       - api
     networks:
