--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "steel-browser",
+  "name": "@steel/api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,46 +13,45 @@
   },
   "author": "Nasr Mohamed",
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/jest": "^29.2.2",
-    "@types/node": "^17.0.45",
-    "@types/ws": "^8.5.11",
+    "@types/dotenv": "^8.2.3",
+    "@types/json-stringify-safe": "^5.0.3",
+    "@types/node": "^22.13.1",
+    "@types/ws": "^8.5.14",
     "prettier": "3.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.0"
   },
   "dependencies": {
-    "@fastify/cors": "^8.4.0",
-    "@fastify/http-proxy": "^9.5.0",
-    "@fastify/jwt": "^8.0.1",
-    "@fastify/sensible": "^4.1.0",
-    "@fastify/swagger": "^8.15.0",
-    "@fastify/view": "9.1.0",
-    "@fastify/websocket": "^10.0.1",
+    "@fastify/cors": "^10.0.2",
+    "@fastify/reply-from": "^12.0.2",
+    "@fastify/sensible": "^6.0.3",
+    "@fastify/swagger": "^9.4.2",
+    "@fastify/view": "10.0.2",
+    "@fastify/vite": "^7.0.1",
     "@mozilla/readability": "^0.5.0",
-    "@scalar/fastify-api-reference": "^1.25.59",
-    "@types/json-stringify-safe": "^5.0.3",
-    "dotenv": "^16.4.5",
-    "fastify": "^4.15.0",
+    "@scalar/fastify-api-reference": "^1.25.116",
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
+    "fastify": "^5.2.1",
     "fastify-graceful-shutdown": "^4.0.1",
-    "fastify-plugin": "^4.5.1",
-    "fastify-zod": "^1.4.0",
-    "fingerprint-generator": "^2.1.56",
-    "fingerprint-injector": "^2.1.56",
-    "get-port": "^7.1.0",
+    "fastify-plugin": "^5.0.1",
+    "fingerprint-generator": "^2.1.62",
+    "fingerprint-injector": "^2.1.62",
     "http-proxy": "^1.18.1",
-    "jsdom": "^24.1.1",
     "json-stringify-safe": "^5.0.1",
-    "pino": "^8.16.0",
-    "pino-pretty": "^10.2.3",
-    "proxy-chain": "^2.5.3",
-    "puppeteer-core": "^22.14.0",
-    "supertest": "^6.3.1",
-    "tap": "^18.4.6",
-    "ts-jest": "^29.0.3",
+    "jsdom": "^26.0.0",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
+    "proxy-chain": "^2.5.6",
+    "puppeteer-core": "^24.2.0",
     "ts-node-dev": "^2.0.0",
     "turndown": "^7.2.0",
-    "zod": "^3.22.4",
-    "zod-to-json-schema": "^3.21.4"
+    "uuid": "^11.0.5",
+    "zod": "^3.24.2",
+    "zod-to-json-schema": "^3.24.1"
+  },
+  "overrides": {
+    "cross-spawn": "^7.0.6"
   }
 }
