refactor(package.json, scripts/run-backend.js): update backend script to use Node.js script
- Updated the `backend` script in `package.json` to run using a custom Node.js script (`run-backend.js`).
- Created `scripts/run-backend.js` which uses Node.js's `child_process` module to spawn a child process for running the backend development server.
- Added functionality to parse command line arguments for setting port and Chrome DevTools Protocol (CDP) redirect port.
- Set default values for port and CDP redirect port if not provided via command line.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "build": "npm run build --workspaces",
-    "backend": "npm run dev -w api"
+    "backend": "node scripts/run-backend.js"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
